src/internal/codegen/snapshots/hebi__internal__codegen__tests__method_call_0.snap
---
source: src/internal/codegen/tests.rs
expression: snapshot
---
# Input:
o.f()

# Func:
function `main` (registers: 1, length: 6, constants: 2)
.code
  0 | load_global [1]; o
  2 | load_field [0]; f
  4 | call0
  5 | return



