src/internal/codegen/snapshots/hebi__internal__codegen__tests__method_call_1.snap
---
source: src/internal/codegen/tests.rs
expression: snapshot
---
# Input:
o.f(0)

# Func:
function `main` (registers: 3, length: 14, constants: 2)
.code
  0  | load_global [1]; o
  2  | load_field [0]; f
  4  | store r1
  6  | load_smi 0
  8  | store r2
  10 | call r1, 1
  13 | return



