src/internal/codegen/snapshots/hebi__internal__codegen__tests__print_float.snap
---
source: src/internal/codegen/tests.rs
expression: snapshot
---
# Input:
print 2.5

# Func:
function `main` (registers: 1, length: 4, constants: 1)
.code
  0 | load_const [0]; 2.5
  2 | print
  3 | return



