src/internal/codegen/snapshots/hebi__internal__codegen__tests__print_string.snap
---
source: src/internal/codegen/tests.rs
expression: snapshot
---
# Input:
print "test"

# Func:
function `main` (registers: 1, length: 4, constants: 1)
.code
  0 | load_const [0]; test
  2 | print
  3 | return



